@@ -8,6 +8,14 @@ Yosys 0.10 .. Yosys 0.10-dev
  * Various
     - Added $aldff and $aldffe (flip-flops with async load) cells
 
+ * SystemVerilog
+    - Fixed an issue which prevented writing directly to a memory word via a
+      connection to an output port
+    - Fixed an issue which prevented unbased unsized literals (e.g., `'1`) from
+      filling the width of a cell input
+    - Fixed an issue where connecting a slice covering the entirety of a signed
+      signal to a cell input would cause a failed assertion
+
 Yosys 0.9 .. Yosys 0.10
 --------------------------
 
